--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ canvas {
     100% { clip-path:  polygon(50% 50%, 50% 25%, 50% 50%, 75% 50%, 50% 50%, 50% 75%, 50% 50%, 25% 50%); }
 }
 
-.split-diagonal canvas {
+.split-diagonal img {
     clip-path: polygon(0% 100%, 100% 1000%, 100% 0);
 }
 
