--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ canvas {
     max-width: 75vw;
     max-height: 75vh;
     box-shadow: 0 0 6px 2px hsla(240, 100%, 2%, 0.3);
-
+    border: 1.5vmin solid white;
     /*clip-path: polygon(0% 0%, 0% 0%, 0% 0, 0% 0%);*/
     /*clip-path: inset(0px 0px 0px 0px);*/
     /*clip-path: inset(0px 100% 0px 0px);*/
@@ -86,7 +86,7 @@ img {
     padding: 2vmin;
     z-index: -1;
     display: none;
-
+    margin: 1.5vmin;
     /*transition: clip-path 1s;*/
     /*clip-path: polygon(0% 100%, 100% 100%, 100% 0, 0% 100%);*/
 }
